@@ -72,6 +72,7 @@ static timings_t base_timings[] = {
   { 3528000, 1764750, 24, 128, 24, 48, 48, 192, 48, 27, 14336 }, /* TC2068 */
   { 3546900, 1773400, 24, 128, 32, 40, 48, 192, 48, 24, 14336 }, /* Scorpion */
   { 3546900, 1773400, 24, 128, 24, 52, 48, 192, 48, 23, 14361 }, /* +3e */
+  { 3500000, 1750000, 24, 128, 24, 48, 47, 192, 48, 25, 14336 }, /* SE */
 };
 
 libspectrum_dword
